Modify status bubble text color.

Change from 50% alpha to 60% alpha as starting point (as per sgabriel's
recommendation).

Add a second step where we calculate a readable color. This doesn't
affect the classic theme but makes the text a little darker in some
cases (like GTK mode).

BUG=615175

Review-Url: https://codereview.chromium.org/2018023002
Cr-Commit-Position: refs/heads/master@{#396522}

Former-commit-id: 480bd209859e7848c6636638d4b4a6804bc6dc4f